Fix: All discover modes now work (Random, Trending, Recommended)
- Fixed findRandom(): Changed from immutable list (.toList()) to mutable list (.collect())
  This allows Collections.shuffle() to work without throwing UnsupportedOperationException
- Fixed recommendForUser(): Wrapped @Cacheable logic in separate cached method
  Prevents NullPointerException when evaluating cache key for null user
  Now returns findLatest() for anonymous users immediately
- All three modes now return results without errors:
  * Random: Shuffles admin-added perfumes
  * Trending: Returns latest admin-added perfumes
  * Recommended: Returns trending for anonymous users, personalized for authenticated